--- a/home.html
+++ b/home.html
@@ -23,6 +23,54 @@
 <p><a href = http://www.facebook.com/profile.php?id=100035327867522> helo maycung</a></p>
 <img src="images/yae.jpg" width="300px"/>
 <img src="images/ei.jpg"width="500"/>
+<audio controls>
+    <source src="media/Doan%20Tuyet%20Nang%20Di%20Remix_%20-%20Phat%20Huy%20T4.mp3"/>
+</audio>
+<video controls width="600"height="400">
+<source src="media/Senbonzakura%20Thousand%20Cherry%20Blossoms_%20-.mp4"/>
+</video>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/dn8etqEPtFg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <ul>
+    <li>Nguyễn Hữu Khánh</li>
+    <li>Bùi Hoàng Giang</li>
+    <li>Nguyễn Zũ</li>
+    <li>Phùng Zú</li>
+</ul>
+<ol>
+    <li>Kaedehara Kazuha</li>
+    <li>Kamisato Ayaka</li>
+    <li>Nguyễn Zũ</li>
+    <li>Phùng Zú</li>
+</ol>
+<table>
+    <thead>
+    <tr>
+        <th>Tên Sinh Viên</th>
+        <th>Email</th>
+        <th>Tuổi</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td>Kaedehara Kazuha</td>
+        <td>kae***@***.com</td>
+        <td>20+</td>
+    </tr>
+    <tr>
+        <td>Kamisato Ayaka</td>
+        <td>ka***@***.***</td>
+        <td>20+</td>
+    </tr>
+    <tr>
+        <td>Nguyễn Hữu Khánh</td>
+        <td>prosv6sao@gmail.com</td>
+        <td>18</td>
+    </tr>
+
+    </tbody>
+</table>
+
 
 </body>
 </html>
