--- a/dubaothoitiet.html
+++ b/dubaothoitiet.html
@@ -5,7 +5,7 @@
     <title>Thời Tiết</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css"/>
 
-    <link rel="stylesheet" href="css/dbtt.css">
+    <link rel="stylesheet" href="CSS/dbtt1.css">
 </head>
 <body>
 <section class="section">
